manifests/home/home.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home
  namespace: home
  labels:
    app: home
    service: web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      namespace: home
      labels:
        app: home
        service: web
    spec:
      securityContext:
        runAsUser: 101
        runAsGroup: 101
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
        - name: cache
          emptyDir:
            medium: Memory
      containers:
        - name: home
          image: ghcr.io/christopherjmiller/chrismiller.xyz:0.0.11
          ports:
            - containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
          lifecycle:
            preStop:
              exec:
                command: [/usr/sbin/nginx, -s, quit]
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /var/cache/nginx
              name: cache
          securityContext:
            readOnlyRootFilesystem: true
            runAsUser: 101
            runAsGroup: 101
---
apiVersion: v1
kind: Service
metadata:
  name: home
  namespace: home
  labels:
    service: web
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: home
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juneliangma
  namespace: home
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - juneliangma.com
        - www.juneliangma.com
      secretName: juneliangma-tls
  rules:
    - host: juneliangma.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  number: 80
    - host: www.juneliangma.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  number: 80
